# aether

./: .gitignore  Cargo.toml  build.rs
.claude/: CLAUDE.md
.claude/rules/: anti-patterns.md  api-design.md  ci-conventions.md  dependency-conventions.md  docker-conventions.md  git-conventions.md  logging-conventions.md  proto-conventions.md  raft-conventions.md  rust-conventions.md  security-conventions.md  storage-conventions.md  testing-conventions.md  versioning-conventions.md
.github/workflows/: audit.yml  ci.yml  codeql-analysis.yml  release.yml  scorecards.yml
benches/: codec.rs  raft_store.rs  storage.rs
proto/: auth.proto  barrier.proto  cluster.proto  common.proto  election.proto  kv.proto  lease.proto  lock.proto  maintenance.proto  queue.proto  raft.proto  session.proto  shard.proto  watch.proto
src/: config.rs  error.rs  lib.rs  main.rs
src/api/: auth.rs  barrier.rs  cluster.rs  election.rs  health.rs  kv.rs  lease.rs  lock.rs  maintenance.rs  metrics.rs  mod.rs  queue.rs  session.rs  shard.rs  watch.rs
src/auth/: cache.rs  interceptor.rs  mod.rs  role.rs  token.rs  user.rs
src/barrier/: mod.rs
src/cluster/: alarm.rs  discovery.rs  mod.rs
src/election/: mod.rs
src/gateway/: auth_proxy.rs  barrier_proxy.rs  cluster_proxy.rs  election_proxy.rs  kv_proxy.rs  lease_proxy.rs  lock_proxy.rs  maintenance_proxy.rs  mod.rs  queue_proxy.rs  session_proxy.rs  watch_proxy.rs
src/lease/: lease.rs  mod.rs  store.rs
src/lock/: mod.rs
src/proto/: mod.rs
src/queue/: mod.rs
src/raft/: handle.rs  log_store.rs  mod.rs  network.rs  node.rs  raftrs_handle.rs  raftrs_store.rs  rpc.rs  snapshot.rs  state_machine.rs
src/session/: mod.rs
src/shard/: manager.rs  mod.rs  region.rs  scheduler.rs
src/storage/: mod.rs  mvcc.rs  rocksdb.rs
src/watch/: mod.rs
tests/: auth_test.rs  storage_test.rs
