[package]
name = "aether"
version = "0.1.0"
edition = "2024"

[dependencies]
# --- Raft consensus ---
openraft = { version = "0.9", features = ["serde", "storage-v2"] }

# --- Storage ---
rocksdb = "0.24"

# --- Serialization ---
serde = { version = "1.0", features = ["derive"] }
rkyv = "0.8"

# --- gRPC ---
tonic = "0.14"
tonic-prost = "0.14"
prost = "0.14"

# --- Async runtime ---
tokio = { version = "1", features = ["full"] }

# --- Logging ---
tracing = "0.1"
tracing-subscriber = "0.3"

# --- CLI ---
clap = { version = "4", features = ["derive"] }

# --- Error handling ---
anyhow = "1"
thiserror = "2"
toml = "0.8"

# --- Utilities ---
async-trait = "0.1"
bytes = "1"
futures = "0.3"
serde_json = "1"
tokio-stream = "0.1.18"

[build-dependencies]
tonic-prost-build = "0.14"

[dev-dependencies]
tempfile = "3"
