[package]
name = "aether"
version = "0.1.0"
edition = "2024"

[dependencies]
# --- Raft consensus ---

# --- Storage ---
rocksdb = "0.24"

# --- Serialization ---
serde = { version = "1.0", features = ["derive"] }
rkyv = "0.8"
bincode = "1"

# --- gRPC ---
tonic = { version = "0.14", features = ["tls-ring"] }
tonic-prost = "0.14"
prost = "0.14"

# --- Async runtime ---
tokio = { version = "1", features = ["full"] }

# --- Logging ---
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "registry"] }
tracing-appender = "0.2"

# --- Metrics ---
prometheus = "0.14"

# --- HTTP (admin server for metrics/health) ---
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"

# --- CLI ---
clap = { version = "4", features = ["derive"] }

# --- Error handling ---
anyhow = "1"
thiserror = "2"
toml = "0.8"

# --- Utilities ---
async-trait = "0.1"
bytes = "1"
futures = "0.3"
serde_json = "1"
tokio-stream = "0.1.18"
raft = { git = "https://github.com/tikv/raft-rs", rev = "ad13f3d90780f53aea2488c6a4b76c0d334bf136", default-features = false, features = ["prost-codec", "default-logger"] }
# raft-rs 0.7 depends on prost 0.11, while tonic 0.14 uses prost 0.14.
# We alias prost 0.11 as prost011 to avoid version conflicts.
prost011 = { version = "0.11", package = "prost" }
# Used in the raft event loop for blocking multi-channel recv with timeout.
crossbeam-channel = "0.5"

# --- Tower middleware ---
tower = "0.5"
http = "1"

# --- Auth ---
jsonwebtoken = "9"
argon2 = "0.5"
rand_core = { version = "0.6", features = ["getrandom"] }

[build-dependencies]
tonic-prost-build = "0.14"

[dev-dependencies]
tempfile = "3"
